两个数据源，对应各自的事务管理器处理，手动处理事务

--- a/multipledatasources2/src/main/resources/application.properties
+++ b/multipledatasources2/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.test2.username=root
 spring.datasource.test2.password=
 spring.datasource.test2.driver-class-name=com.mysql.cj.jdbc.Driver
 
+##¿ªÆômybatisÈÕÖ¾
+logging.level.com.sym.multipledatasources.mapper=debug
+
 
 
 
