--- a/multipledatasources5/pom.xml
+++ b/multipledatasources5/pom.xml
@@ -50,6 +50,11 @@
 <!--			<artifactId>spring-boot-starter-jta-atomikos</artifactId>-->
 <!--		</dependency>-->
 		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.10</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.11</version>
