--- a/multipledatasources5/src/main/resources/application.yml
+++ b/multipledatasources5/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     druid:
       one:  #数据源1
-        url: jdbc:mysql://localhost:3306/dbone?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+        url: jdbc:mysql://192.168.43.90:3306/dbone?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
         username: root
         password:
       two:  #数据源2
@@ -43,3 +43,6 @@ logging:
       sym:
         multipledatasources:
           mapper: debug
+
+mybatis:
+  mapper-locations: mapping/*/*.xml
